5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_1054.log
== SUBMITION (2019-04-09 16:49:40) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 2x+y=3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.149713
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    if (x,y == 2x+y=3): 
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:42) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 2x+y=3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (x,y == 2x+y=3): 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:49:49) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 2x+y): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.210103
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    if (x,y == 2x+y): 
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:50) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 2x+y): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 4
    if (x,y == 2x+y): 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:52:18) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 1): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.189575
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:22) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 1): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:28) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 1): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:52:44) 
-- CODE:
x = float(input())
y = float(input())

if (x,y == 1): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.166503
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:54:41) 
-- CODE:
x = float(input())
y = float(input())
r = y + 2x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.153873
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 3
    r = y + 2x
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:42) 
-- CODE:
x = float(input())
y = float(input())
r = y + 2x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    r = y + 2x
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:54:42) 
-- CODE:
x = float(input())
y = float(input())
r = y + 2x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.141093
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 3
    r = y + 2x
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:54:51) 
-- CODE:
x = float(input())
y = float(input())
r = y+2*x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.160371
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:54:52) 
-- CODE:
x = float(input())
y = float(input())
r = y+2*x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.224161
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:52) 
-- CODE:
x = float(input())
y = float(input())
r = y+2*x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:55:01) 
-- CODE:
x = float(input())
y = float(input())
r = y+2*x

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.205679
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:23) 
-- CODE:
x = float(input())
y = float(input())
r = 2x-3

if (x,y == r): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.188377
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 3
    r = 2x-3
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:26) 
-- CODE:
x = float(input())
y = float(input())
r = 2x-3

if (x,y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.214069
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 3
    r = 2x-3
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:27) 
-- CODE:
x = float(input())
y = float(input())
r = 2x-3

if (x,y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.147629
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 3
    r = 2x-3
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:27) 
-- CODE:
x = float(input())
y = float(input())
r = 2x-3

if (x,y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    r = 2x-3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:38) 
-- CODE:
x = float(input())
y = float(input())


if (2x+y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.184695
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 5
    if (2x+y == 3): 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:38) 
-- CODE:
x = float(input())
y = float(input())


if (2x+y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (2x+y == 3): 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:40) 
-- CODE:
x = float(input())
y = float(input())


if (2x+y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (2x+y == 3): 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:46) 
-- CODE:
x = float(input())
y = float(input())


if (2*x+y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:47) 
-- CODE:
x = float(input())
y = float(input())


if (2*x+y == 3): 
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.12933
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
